init first component

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "dev": "shadow-cljs watch ui"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "scheduler": "^0.23.0"
+  },
   "devDependencies": {
     "shadow-cljs": "2.26.0"
   }
